# lordpad-win

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: CI_build.yml
PowerEditor-qt/: CMakeLists.txt
PowerEditor-qt/cheatsheets/: adb.md  bash.md  css.md  jq.md  linux-cli.md  tmux.md  typescript.md
PowerEditor-qt/resources/: lordpad.rc  notepadpp-qt.qrc
PowerEditor-qt/resources/themes/: dark.qss  dracula.qss  light.qss
PowerEditor-qt/src/: AutoCompleter.cpp  AutoCompleter.h  AutoSavePolicy.cpp  AutoSavePolicy.h  BookmarkManager.cpp  BookmarkManager.h  BraceMatcher.cpp  BraceMatcher.h  CodeFormatter.cpp  CodeFormatter.h  ColorPickerHelper.cpp  ColorPickerHelper.h  CrashRecovery.cpp  CrashRecovery.h  CrossGroupTabBar.cpp  CrossGroupTabBar.h  EditEnhancements.cpp  EditEnhancements.h  EditOperations.cpp  EditOperations.h  EditorTab.cpp  EditorTab.h  EolMenu.cpp  EolMenu.h  ExternalFileWatcher.cpp  ExternalFileWatcher.h  FileIO.cpp  FileIO.h  GitStatusService.cpp  GitStatusService.h  I18n.cpp  I18n.h  JsonXmlFormatter.cpp  JsonXmlFormatter.h  LanguagesMenu.cpp  LanguagesMenu.h  LexerMap.cpp  LexerMap.h  MacroRecorder.cpp  MacroRecorder.h  (+31 more)
PowerEditor-qt/src/compat/: HunspellStub.hxx
PowerEditor-qt/src/dialogs/: BookmarkDialog.cpp  BookmarkDialog.h  CommandPalette.cpp  CommandPalette.h  ComparePanel.cpp  ComparePanel.h  CssPreviewPane.cpp  CssPreviewPane.h  CsvTableView.cpp  CsvTableView.h  FindInFilesDialog.cpp  FindInFilesDialog.h  FindReplaceDialog.cpp  FindReplaceDialog.h  GoToLineDialog.cpp  GoToLineDialog.h  HashDialog.cpp  HashDialog.h  HexViewer.cpp  HexViewer.h  MacroDialog.cpp  MacroDialog.h  MarkdownPreviewPane.cpp  MarkdownPreviewPane.h  PreferencesDialog.cpp  PreferencesDialog.h  SnippetsDialog.cpp  SnippetsDialog.h  WordCountDialog.cpp  WordCountDialog.h
PowerEditor-qt/src/panels/: CheatsheetPanel.cpp  DocumentMapPanel.cpp  DocumentMapPanel.h  ExecOutputPanel.cpp  ExecOutputPanel.h  FileBrowserPanel.cpp  FileBrowserPanel.h  FunctionListPanel.cpp  FunctionListPanel.h  SysInfoPanel.cpp  SystemMonitorPanel.cpp  TerminalPanel.cpp
PowerEditor-qt/translations/: notepadpp-qt_pt_BR.ts
PowerEditor/src/: NppLibsVersionH-generator.sh
docs/: BUILDING-LINUX.md  PLUGINS-FEDORA.md  PORTING.md
lexilla/src/: Lexilla.cxx
packaging/: notepadpp-qt.desktop  notepadpp-qt.metainfo.xml  notepadpp-qt.spec
packaging/windows/: deploy-win.sh
scintilla/qt/ScintillaEdit/: ScintillaEdit.cpp
